# spotifyrs

./: .gitmodules  Cargo.toml  LICENSE
app/: Cargo.toml  custom.scss  index.html
app/src/: app.rs  components.rs  main.rs  pages.rs
app/src/app/: utils.rs
app/src/components/: authorisation.rs  delayed_redirect.rs  notification.rs
app/src/components/authorisation/: authorisation_form.rs
app/src/components/notification/: drawer.rs  timeout.rs  trigger.rs
app/src/pages/: authorised.rs  login.rs
spotify-api/: Cargo.toml
spotify-api/src/: authorisation.rs  client.rs  lib.rs
spotify-api/src/authorisation/: scopes.rs  tokens.rs
utils/: Cargo.toml
utils/src/: delay.rs  lib.rs  request.rs  store.rs  url.rs
utils/tests/: integration_tests.rs
